[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Pau <plabartabajo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.9.0"
cleverhans = "^3.1.0"
torchvision = "^0.10.0"
absl-py = "^0.13.0"
easydict = "^1.9"
jupyter = "^1.0.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
